tests/purs/passing/ReExportsExported/A.purs
module A (a) where

a :: String
a = "Done"
