tests/purs/failing/CoercibleRepresentational6/N.purs
module N (N) where

newtype N a = N a
